--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "datauri": "^4.1.0",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
